--- a/Index.html
+++ b/Index.html
@@ -547,6 +547,13 @@
             transform: translateY(0);
         }
     </style>
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "tgwsdcnbx0");
+</script>
 </head>
 <body>
     <div class="container">
@@ -818,3 +825,4 @@ Content-Type: application/json
 </body>
 
 </html>
+
